[package]
name = "bitenum"
description = "binary enums with bitflags support"
keywords = ["enum", "bitflags", "no_std"]
version = "0.2.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mixkorshun/bitenum"
repository = "https://github.com/mixkorshun/bitenum"
edition = "2021"

[dependencies]
bitenum_macro = { version = "0.2.0", path = "../bitenum_macro" }
