[package]
name = "bitenum_macro"
description = "bitenum macro"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mixkorshun/bitenum"
repository = "https://github.com/mixkorshun/bitenum"

[lib]
name = "bitenum_macro"
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = ["full", "extra-traits"] }
quote = { version = "1.0.35" }

[dev-dependencies]
bitenum = { path = "../bitenum" }
